Sunnyside Agency pt1

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             border: 4px solid rgb(23, 95, 230);
             width: 60%;
             padding: 10px;
-            margin: 0 auto;
+            margin: 1rem auto;
             list-style: none;
         }
         a{
@@ -36,6 +36,12 @@
             <p class="project__description">
                 I still have some problems to resize the image in the right way,
                 it will probably need some re-work
+            </p>
+        </li>
+        <li class="project">
+            <a href="sunnyside-agency/index.html">Sunnyside agency</a>
+            <p class="project__description">
+                Still working on this one
             </p>
         </li>
     </ul>
