Sunnyside Agency mobile version

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <li class="project">
             <a href="sunnyside-agency/index.html">Sunnyside agency</a>
             <p class="project__description">
-                Still working on this one
+                The website of a fictional agency, the mobile menu is not quite what
+                i was expecting, but it's good. 
+                I will probably come back to this for some small adjustments.
             </p>
         </li>
     </ul>
