--- a/sunnyside-agency/index.html
+++ b/sunnyside-agency/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Barlow,wght@1,500&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/menu.js" defer></script>
   
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 
@@ -18,14 +18,25 @@
 </head>
 <body>
   <header>
+    <ul id="menu__mobile">
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
     <nav>
       <h1>Sunnyside</h1>
-      <ul>
+      <ul id="menu__desktop">
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
+      <div class="hamburguer">
+        <div class="hambur-btn">
+          <span class="trace"></span>
+        </div>
+      </div>
     </nav>
     <p class="creativity">We are creatives</p>
     <a href="#about">
