social icons hover effect.

--- a/card-preview-component/index.html
+++ b/card-preview-component/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Helio Dias</a>.
+    Coded by <a href="https://github.com/gabrielcavdias/">Helio Dias</a>.
   </div>
 </body>
 </html>
