--- a/index.html
+++ b/index.html
@@ -32,18 +32,25 @@
     <h1>Helio's Frontend Mentor Projects</h1>
     <ul>
         <li class="project">
-            <a href="card-preview-component/index.html">Stats preview card component</a>
+            <a target="__blank" href="card-preview-component/index.html">Stats preview card component</a>
             <p class="project__description">
                 I still have some problems to resize the image in the right way,
                 it will probably need some re-work
             </p>
         </li>
         <li class="project">
-            <a href="sunnyside-agency/index.html">Sunnyside agency</a>
+            <a target="__blank" href="sunnyside-agency/index.html">Sunnyside agency</a>
             <p class="project__description">
                 The website of a fictional agency, the mobile menu is not quite what
                 i was expecting, but it's good. 
                 I will probably come back to this for some small adjustments.
+            </p>
+        </li>
+        <li class="project">
+            <a target="__blank" href="https://todolist-challenge-three.vercel.app/">Todo List</a>
+            <p class="project__description">
+                It's an usual Todo List, I made it with React as my first project in this technology.
+                I still need to implement the drag and drop feature in a future commit.
             </p>
         </li>
     </ul>
