--- a/sunnyside-agency/index.html
+++ b/sunnyside-agency/index.html
@@ -13,7 +13,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { padding: 1rem 0; font-size: .8rem; text-align: center; }    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
