--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <h1>Helio's Frontend Mentor Projects</h1>
     <ul>
         <li class="project">
-            <a target="__blank" href="card-preview-component/index.html">Stats preview card component</a>
+            <a target="_blank" href="card-preview-component/index.html">Stats preview card component</a>
             <p class="project__description">
                 I still have some problems to resize the image in the right way,
                 it will probably need some re-work
             </p>
         </li>
         <li class="project">
-            <a target="__blank" href="sunnyside-agency/index.html">Sunnyside agency</a>
+            <a target="_blank" href="sunnyside-agency/index.html">Sunnyside agency</a>
             <p class="project__description">
                 The website of a fictional agency, the mobile menu is not quite what
                 i was expecting, but it's good. 
@@ -47,10 +47,18 @@
             </p>
         </li>
         <li class="project">
-            <a target="__blank" href="https://todolist-challenge-three.vercel.app/">Todo List</a>
+            <a target="_blank" href="https://todolist-challenge-three.vercel.app/">Todo List</a>
             <p class="project__description">
                 It's an usual Todo List, I made it with React as my first project in this technology.
                 I still need to implement the drag and drop feature in a future commit.
+            </p>
+        </li>
+        <li class="project">
+            <a target="_blank" href="/easybank-landing-page-master/index.html">Easybank</a>
+            <p class="project__description">
+                The website is a fictional bank/fintech landing page. 
+                The project was kind of quick to code and was a good practice
+                although the footer is a little bit different than the original design
             </p>
         </li>
     </ul>
