Job Listing added

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                 although the footer is a little bit different than the original design
             </p>
         </li>
+        <li class="project">
+            <a target="_blank" href="https://static-job-listings-eight.vercel.app/">Job Listing</a>
+            <p class="project__description">
+                The way i structured the filtering caused some blink, because i had to reset the list to its initial state.
+                still in need of some improvement
+            </p>
+        </li>
     </ul>
 </body>
 </html>
