--- a/index.html
+++ b/index.html
@@ -1,73 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Helio's Frontend Mentor</title>
     <style>
-        body{
-            background-color: rgb(28, 36, 42);
-            color: #fff;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            text-align: center;
-        }
-        li{
-            border: 4px solid rgb(23, 95, 230);
-            width: 60%;
-            padding: 10px;
-            margin: 1rem auto;
-            list-style: none;
-        }
-        a{
-            text-transform: uppercase;
-            padding: 10px;
-            color: #fff;
-            font-weight: bold;
-            font-size: 1.2rem;
-        }
+      body {
+        background-color: rgb(28, 36, 42);
+        color: #fff;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+      }
+      li {
+        border: 4px solid rgb(23, 95, 230);
+        width: 60%;
+        padding: 10px;
+        margin: 1rem auto;
+        list-style: none;
+      }
+      a {
+        text-transform: uppercase;
+        padding: 10px;
+        color: #fff;
+        font-weight: bold;
+        font-size: 1.2rem;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Helio's Frontend Mentor Projects</h1>
     <ul>
-        <li class="project">
-            <a target="_blank" href="card-preview-component/index.html">Stats preview card component</a>
-            <p class="project__description">
-                I still have some problems to resize the image in the right way,
-                it will probably need some re-work
-            </p>
-        </li>
-        <li class="project">
-            <a target="_blank" href="sunnyside-agency/index.html">Sunnyside agency</a>
-            <p class="project__description">
-                The website of a fictional agency, the mobile menu is not quite what
-                i was expecting, but it's good. 
-                I will probably come back to this for some small adjustments.
-            </p>
-        </li>
-        <li class="project">
-            <a target="_blank" href="https://todolist-challenge-three.vercel.app/">Todo List</a>
-            <p class="project__description">
-                It's an usual Todo List, I made it with React as my first project in this technology.
-                I still need to implement the drag and drop feature in a future commit.
-            </p>
-        </li>
-        <li class="project">
-            <a target="_blank" href="easybank-landing-page-master/index.html">Easybank</a>
-            <p class="project__description">
-                The website is a fictional bank/fintech landing page. 
-                The project was kind of quick to code and was a good practice
-                although the footer is a little bit different than the original design
-            </p>
-        </li>
-        <li class="project">
-            <a target="_blank" href="https://static-job-listings-eight.vercel.app/">Job Listing</a>
-            <p class="project__description">
-                The way i structured the filtering caused some blink, because i had to reset the list to its initial state.
-                still in need of some improvement
-            </p>
-        </li>
+      <li class="project">
+        <a target="_blank" href="card-preview-component/index.html"
+          >Stats preview card component</a
+        >
+        <p class="project__description">
+          I still have some problems to resize the image in the right way, it
+          will probably need some re-work
+        </p>
+      </li>
+      <li class="project">
+        <a target="_blank" href="sunnyside-agency/index.html"
+          >Sunnyside agency</a
+        >
+        <p class="project__description">
+          The website of a fictional agency, the mobile menu is not quite what i
+          was expecting, but it's good. I will probably come back to this for
+          some small adjustments.
+        </p>
+      </li>
+      <li class="project">
+        <a target="_blank" href="https://todolist-challenge-three.vercel.app/"
+          >Todo List</a
+        >
+        <p class="project__description">
+          It's an usual Todo List, I made it with React as my first project in
+          this technology. I still need to implement the drag and drop feature
+          in a future commit.
+        </p>
+      </li>
+      <li class="project">
+        <a target="_blank" href="easybank-landing-page-master/index.html"
+          >Easybank</a
+        >
+        <p class="project__description">
+          The website is a fictional bank/fintech landing page. The project was
+          kind of quick to code and was a good practice although the footer is a
+          little bit different than the original design
+        </p>
+      </li>
+      <li class="project">
+        <a target="_blank" href="https://static-job-listings-eight.vercel.app/"
+          >Job Listing</a
+        >
+        <p class="project__description">
+          The way i structured the filtering caused some blink, because i had to
+          reset the list to its initial state. still in need of some improvement
+        </p>
+      </li>
+      <li class="project">
+        <a target="_blank" href="advice-generator/index.html"
+          >Advice app Generator</a
+        >
+        <p class="project__description">
+          A simple project, just fetching data from an api and showing on page.
+          It's the first i used "margin-block" and "min()" in css, and those are
+          pretty useful.
+        </p>
+      </li>
     </ul>
-</body>
+  </body>
 </html>
