--- a/advice-generator/index.html
+++ b/advice-generator/index.html
@@ -65,7 +65,7 @@
         >
       </p>
       <p>
-        Created by
+        Coded by
         <a href="https://github.com/gabrielcavdias" target="_blank"
           >Helio Dias</a
         >
